[gd_scene load_steps=6 format=3 uid="uid://bd7upt7hgbq6c"]

[ext_resource type="Script" uid="uid://brabc1ahe7dy5" path="res://scenes/Simple3DPlayer.gd" id="1_3xrgj"]
[ext_resource type="AudioStream" uid="uid://duf1i82r8ul6m" path="res://audio/speed_up.wav" id="2_vurlo"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pg6is"]

[sub_resource type="SphereMesh" id="SphereMesh_pg6is"]

[sub_resource type="BoxShape3D" id="BoxShape3D_v4rds"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_3xrgj")

[node name="pawn" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_pg6is")

[node name="hand" type="MeshInstance3D" parent="pawn"]
transform = Transform3D(0.43014, 0, 0, 0, 0.430139, 0, 0, 0, 0.43014, 0.972537, 0.784611, -1.39749)
mesh = SubResource("SphereMesh_pg6is")

[node name="_flashlight" type="SpotLight3D" parent="pawn"]

[node name="_interaction" type="Area3D" parent="pawn"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="pawn/_interaction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0187894, -0.0167265, -0.0124032)
shape = SubResource("BoxShape3D_v4rds")

[node name="speed_timer" type="Timer" parent="."]
one_shot = true

[node name="fonk_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_vurlo")
volume_db = -3.0

[connection signal="area_entered" from="pawn/_interaction" to="." method="_on__interaction_area_entered"]
